objects/Log__e.object
<CustomObject>
    <description>Logs</description>
    <fields>
        <fullName>DML__c</fullName>
        <label>DML</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SOQL__c</fullName>
        <label>SOQL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Log</label>
    <pluralLabel>Logs</pluralLabel>
</CustomObject>